--- a/ckanext/dia_theme/less/forms.less
+++ b/ckanext/dia_theme/less/forms.less
@@ -842,3 +842,14 @@ textarea {
   -moz-appearance: none;
   appearance: none;
 }
+
+.input-prepend input[type='text'] {
+  display: inline-block;
+}
+
+.input-prepend .add-on {
+  height: 2.5em;
+  font-size: 1rem;
+  line-height: 2em;
+  margin-right: 10px;
+}
